Add config file for markdownlint
This config file turns off the "line too long" rule when within a code
block or a table.  Often there is no way to avoid going over 80 lines
in such cases.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,8 @@ repos:
         # GitHub's autorecognition fu to work, so we should leave it
         # alone.
         exclude: LICENSE.md
+        args:
+          - --config=.mdl_config.json
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.16.0
     hooks:
