Change the way the Oracle-specific version of Java is installed
Oracle now requires you to create an account in order to download the
Java archives that they distribute.  I created such an account and
downloaded the archive here so that it can be copied over and
installed.

Also update the test code, since the two packages that are installed
have changed names slightly.  (The text "-local" has been appended to
their names.)  As a result the tests need to be altered slightly to
agree with this.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,8 +25,16 @@
     value: 'true'
     vtype: select
 
+- name: Copy over the Oracle Java archive
+  copy:
+    src: jdk-11.0.5_linux-x64_bin.tar.gz
+    # Note that the resiling slash here means that the directory will
+    # be created if it does not exist.  See here for details:
+    # https://docs.ansible.com/ansible/latest/modules/copy_module.html#parameters
+    dest: /var/cache/oracle-jdk11-installer-local/
+
 - name: Install Oracle Java
   package:
     name:
-      - oracle-java11-installer
-      - oracle-java11-set-default
+      - oracle-java11-installer-local
+      - oracle-java11-set-default-local
